# COMP6453_bbs_plus

./: .gitignore  .gitmodules  README.md  benchmark.py  benchmark_v2.py  main.py  pyproject.toml  requirements.txt
.obsidian/: workspace.json
bbsplus/: backend_pyecc.py  verifier.py
bbsplus.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
bbsplus_binding_kss16/: CMakeLists.txt  __init__.py
bbsplus_binding_kss16/src/: bindings.cpp
bbsplus_bls12_v1/: README.md  backend_pyecc.py  utils.py  zkproof.py
bbsplus_bls12_v2/: __init__.py  keygen.py  keygen_v2.py  signer.py  signer_v2.py  utils_v2.py  verifier.py  verifier_v2.py  verify.py  zkproof.py  zkproof_v2.py
bbsplus_pyecc/: README.md  backend_pyecc.py  keygen.py  params.py  signer.py  utils.py
src/bbsplus.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/binding_kss16/: CMakeLists.txt  README.md  backend_kss16.py  pyproject.toml
src/bls12/: backend_pyecc.py  params.py
src/bls12/v1/: README.md  __init__.py  bls_12_v_1_readme.md  keygen.py  signer.py  utils.py  verifier.py  zkproof.py
src/bls12/v2/: README.md  __init__.py  keygen_v2.py  signer_v2.py  utils_v2.py  verifier_v2.py  zkproof_v2.py
src/bn254/: backend_pyecc.py  params.py
src/bn254/backends/: __init__.py  base.py  pyecc_backend.py  v1_backend.py
src/bn254/optim/: config.py
src/bn254/utils/: instrumentation.py
src/bn254/v1/: README.md  __init__.py  benchmark.py  keygen.py  signer.py  test_basic.py  utils.py  verifier.py  zkproof.py
tests/: __init__.py  benchmark.py  benchmark_v2.py  test_basic.py  test_basic_bn254.py  test_basic_v2.py  test_selective_disclosure.py  test_selective_disclosure_bn254.py  test_selective_disclosure_v2.py  test_update.py  test_update_bn254.py  test_update_v2.py
