[project]
name = "bbsplus"
version = "0.1.0"
dependencies = [
    "mcl>=0.0.6",
    "mclbn256>=1.3.5",
    "py-ecc>=8",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {""="src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["bn254*","bls12*"]
exclude = ["tests*"]
